--- a/form.html
+++ b/form.html
@@ -56,7 +56,7 @@
                             
                         </div>
                         <div class="col-12 col-lg-12">
-                            <input class="inp1" type="email" placeholder="Email" id="email">
+                            <input class="inp1" type="email" placeholder="Email" id="emaill">
                             <span style="color: red;" id="s-email"></span>
                         </div>
                         <div class="col-12 col-lg-6">
@@ -66,7 +66,7 @@
                         <div class="col-12 col-lg-6">
                             <div class="sel">
                                 <select id="status">
-                                    <option selected>Employment Status</option>
+                                    <option selected value="status">Employment Status</option>
                                     <option value="Employed">Employed</option>
                                     <option value="Fresher">Fresher</option>
                                     <option value="Student">Student</option>
@@ -80,7 +80,7 @@
                         <div class="col-12 col-lg-12">
                             <div class="sel">
                                 <select id="education">
-                                    <option selected>Education</option>
+                                    <option selected value="education">Education</option>
                                     <option value="B.Tech">B.Tech</option>
                                     <option value="B.sc">B.sc</option>
                                     <option value="+2">+2</option>
@@ -98,7 +98,7 @@
                         <div class="col-12 col-lg-6">
                             <div class="sel">
                                 <select id="year" >
-                                    <option selected>Pass out Year</option>
+                                    <option selected value="0">Pass out Year</option>
                                     <option value="2021">2021</option>
                                     <option value="2020">2020</option>
                                     <option value="2019">2019</option>
@@ -136,7 +136,7 @@
                             
                         </div>
                         <div style="margin-top:20px ;" class="col-12 col-lg-12">
-                            <input type="checkbox" name="agree">
+                            <input type="checkbox" name="agree" id="agreecheck">
                             <label id="agree" for="agree"> I agree that I have read and understood all the FAQs</label>
                             <span style="color: red;" id="s-agree"></span>
                         </div>
