--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </div>
         <div class="row">
             <div  class="col-md-12 col-lg-7 col-12">
-                <div class="">
-                    <img id="btn" onclick="playVideo()" class="sps" src="sps.png" alt="">
+                <div onclick="this.style.display='none' ; this.nextElementSibling.style.display='block'" class="">
+                    <img id="btn"  class="sps" src="sps.png" alt="">
                 </div>
                 <div id="showVideoDiv" style="display: none;align-content: center;padding-left: 80px;padding-top: 20px;" class="">
                     <iframe  width="560" height="315" src="https://www.youtube.com/embed/I9QGnNvrmoY?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
