--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <h1 class="heading">SPS<span class="green-dot">.</span></h1>
             </div>
         </div>
-        <div class="row container">
-            <div  class="col-md-7">
+        <div class="row ">
+            <div  class="col-md-8">
                 <div onclick="this.style.display='none' ; this.nextElementSibling.style.display='block'" >
                     <img  style="cursor: pointer;" class="img-fluid" src="sps.png" alt="">
                 </div>
@@ -52,8 +52,8 @@
                 
                 
             </div>
-            <div class="col-md-5">
-                <div class="content1">
+            <div class="col-md-4">
+                <div class="content1 ">
                     <h2 class="heading1">No Tuition Fee Upfront,<br> Pay Only When You Earn.</h2>
                 </div>
                 <div style="width: 100%; height: 20px;"></div>
